welcome.lessons.welcome.array.search.IndexOfMaxValue.scala.error
indexOfMaxValue:7: error: not found: value i
    if (nums(i)==max) {return i}
             ^indexOfMaxValue:7: error: not found: value i
    if (nums(i)==max) {return i}
                              ^indexOfMaxValue:6: error: type mismatch;
 found   : Unit
 required: Int
  for (k <- 0 to nums.length-1) {
         ^